plugins {
    id 'org.jetbrains.kotlin.jvm' version '1.9.22' apply false
    id 'org.jetbrains.kotlin.plugin.spring' version '1.9.22' apply false
    id 'org.jetbrains.kotlin.plugin.jpa' version '1.9.22' apply false
    id 'org.springframework.boot' version '3.2.3' apply false
    id 'io.spring.dependency-management' version '1.1.4' apply false
}

allprojects {
    if (it.name != 'hobsinn-android') {
        apply plugin: 'java'
    }

    group = 'com.hobsinnovations.hobsinn'
    version = '1.0.0-SNAPSHOT'

    if (it.name != 'hobsinn-android') {
        java {
            toolchain {
                languageVersion = JavaLanguageVersion.of(21)
            }
        }
    }

    repositories {
        mavenCentral()
        google()
        maven { url 'https://repo.spring.io/milestone' }
    }
}

subprojects {
    if (it.name != 'hobsinn-android') {
        apply plugin: 'org.jetbrains.kotlin.jvm'

        kotlin {
            jvmToolchain {
                languageVersion.set(JavaLanguageVersion.of(21))
            }
        }

        tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
            kotlinOptions {
                freeCompilerArgs = ['-Xjsr305=strict']
                jvmTarget = '21'
            }
        }

        tasks.withType(Test) {
            useJUnitPlatform()
            jvmArgs '-XX:+EnableDynamicAgentLoading'
        }
    }
}